Ajout de la route *fire*
