# swagger.yaml
@@ -81,6 +81,73 @@ paths:
                   hit:
                     type: boolean
                     example: true
+        '400':
+          description: Request was invalid
+          content:
+            json:
+              schema:
+                type: object
+                properties:
+                  reason:
+                    type: string
+                    example: "Tir pas dans la grille"
+
+
+  /play/{gameId}/bombe:
+    post:
+      tags:
+       - play
+      description: Lancer une bombe sur une case pour detruire tout dans le voisinnage direct
+      parameters:
+        - name: gameId
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 0196fdf3-93b1-7000-93c0-5249c1710d41
+      requestBody:
+        content:
+          json:
+            schema:
+              type: object
+              properties:
+                x:
+                  type: integer
+                  example: 4
+                y:
+                  type: integer
+                  example: 8
+                player:
+                  description:  uuid du joueur
+                  type: string
+                  example: 0196fdf3-93b1-7000-93c0-5249c1710d41
+
+      responses:
+        '200':
+          description: Shot was at valid coordinates
+          content:
+            json:
+              schema:
+                type: object
+                properties:
+                  kill:
+                    description: cases dont le bateau est detruit
+                    type: array
+                    example: [[5, 9], [3, 7]]
+                  hit:
+                    description: cases sur lesquelles il y a un bateau
+                    type: array
+                    example: [[5, 9]]
+        '400':
+          description: Request was invalid
+          content:
+            json:
+              schema:
+                type: object
+                properties:
+                  reason:
+                    type: string
+                    example: "Tir pas dans la grille"
 
 
   /play/join/{gameId}:
